{
  "add_account": "Add Account",
  "edit_account": "Edit Account",
  "account_count_one": "{{count}} account",
  "account_count_other": "{{count}} accounts",
  "balance": "Balance",
  "account_preview": "Account preview",
  "account_name": "Account Name",
...
