...
            value={formData.accountType}
            onChange={(accountType) => updateField("accountType", accountType)}
          />

          <TextField
            label={t("account_name")}
            testID="account-name-input"
            placeholder={
              formData.accountType === "BANK"
                ? t("account_name_placeholder_bank")
                : formData.accountType === "DIGITAL_WALLET"
                  ? t("account_name_placeholder_wallet")
                  : t("account_name_placeholder_cash")
...
